Remove unnecessary comments